syntax = "proto3";

package proto;

option go_package = "internal/app/grpc/proto";

service PerformanceService {
  rpc GetTeamsMatchingStats(TeamStatRequest) returns (TeamStatResponse) {}
}

message TeamStatRequest {
  string action = 1;
  uint32 games = 2;
  string measure = 3;
  string metric = 4;
  repeated uint64 seasons = 5;
  string stat = 6;
  float value = 7;
  string venue = 8;
}

message TeamStatResponse {
  repeated PerformanceTeam teams = 1;
}

message PerformanceTeam {
  uint64 id = 1;
  string name = 2;
}
