syntax = "proto3";

package proto;

message FixtureRequest {
    uint64 fixture_id = 1;
}

message SeasonFixtureRequest {
    uint64 season_id = 1;
    // RFC3339 formatted string i.e. "2006-01-02T15:04:05Z07:00"
    string date_from = 2;
    // RFC3339 formatted string i.e "2006-01-02T15:04:05Z07:00"
    string date_to = 3;
}
